# promptvault

./: .gitignore  README.md  authredesignimplementation.md
backend/: .env.example  .gitignore  app.py  pyproject.toml  requirements.txt  test_api.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 20260710_hardening.py  20260711_search_indexes.py  20260712_product_features.py  20260713_oauth_login.py  20260714_token_version.py  20260715_refresh_families.py  20260716_email_lower_unique.py  20260717_oauth_transactions.py  20260718_session_metadata.py  20260719_link_challenges.py
backend/app/: database.py  main.py
backend/app/core/: config.py  csrf.py  db_errors.py  dependencies.py  normalize.py  rate_limit.py  security.py
backend/app/graphify-out/: graph.json  manifest.json
backend/app/jobs/: token_cleanup.py
backend/app/models/: __init__.py  group.py  link_challenge.py  oauth_account.py  oauth_transaction.py  prompt.py  prompt_tag.py  prompt_version.py  refresh_token.py  security_event.py  tag.py  user.py
backend/app/routers/: auth.py  dashboard.py  groups.py  prompts.py  tags.py
backend/app/schemas/: __init__.py  auth.py  common.py  group.py  product.py  prompt.py  search.py  tag.py  user.py
backend/app/services/: auth_service.py  dashboard_service.py  (+4 more)
backend/tests/: conftest.py  test_config_guard.py  test_csrf_and_rate_limit.py  test_deferred_placeholders.py  test_email_and_races.py  test_link_challenge.py  test_oauth_service.py  test_oauth_transactions.py  test_rotation.py  test_session_policy.py  test_sessions_and_cleanup.py
(+106 files in other folders)
