[project]
name = "promptnest-backend"
version = "1.0.0"
description = "PromptNest — personal AI prompt management platform (FastAPI backend)."
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "psycopg2-binary",
    "python-dotenv",
    "pydantic",
    "pydantic-settings",
    "alembic",
    "email-validator",
    "passlib[bcrypt]",
    "bcrypt<4.1",  # passlib 1.7.4's bcrypt backend breaks on bcrypt >= 4.1
    "python-jose[cryptography]",
    "httpx",
]

[dependency-groups]
dev = [
    "pytest",
]

[tool.uv]
package = false
